fix custom search icon size (#992)
fix custom search icon size

Removes custom aeb styling that was causing search icons to be too large.

J=SLAP-1654
TEST=manual,auto

tweaked the snapshot config to test these
saw no issues with a custom submitIcon or customIconUrl
loading indicator worked as expected

--- a/static/scss/answers/legacy-aeb/lanswers-overrides.scss
+++ b/static/scss/answers/legacy-aeb/lanswers-overrides.scss
@@ -1,14 +1,6 @@
 .yxt-SearchBar
 {
   margin-bottom: 0;
-
-  &-buttonImage
-  {
-    svg
-    {
-      font-size: 24px;
-    }
-  }
 }
 
 .yxt-NoResults
